[TASK] Prepare git & ide & codestyle

--- a/.docker/.env
+++ b/.docker/.env
@@ -1,6 +1,7 @@
 # Project settings
 COMPOSE_PROJECT_NAME=heikohardt_dev_kickstart
 COMPOSE_PROJECT_ROOT=/var/www/html
+COMPOSE_PROJECT_PORT=03
 
 # Persist bash history
 PROMPT_COMMAND='history -a'
@@ -14,8 +15,8 @@ DB_USER=developer
 DB_PASSWORD=P@ssw0rd
 
 # TYPO3
-# TYPO3_BRANCH=13.4 ... deprecated in composer 2 environment
 ORIGIN_PATH_ROOT=${COMPOSE_PROJECT_ROOT}/.run
+
 TESTING_PATH_ROOT=${COMPOSE_PROJECT_ROOT}/Public
 TESTING_DB_HOST=${DB_HOST}
 TESTING_DB_PORT=${DB_PORT}
@@ -23,4 +24,4 @@ TESTING_DB_NAME=${DB_DATABASE}
 TESTING_DB_USER=${DB_USER}
 TESTING_DB_PASSWORD=${DB_PASSWORD}
 
-TYPO3_URL=http://localhost:8803
+TYPO3_URL=http://localhost:88${COMPOSE_PROJECT_PORT}
